syntax = "proto3";

option java_package = "org.quran.datastore";
option java_multiple_files = true;

message ReadingPositionPreferences {
  int32 page = 1;
  int32 sura = 2;
  int32 ayah = 3;
}